testing/sidecar-rate-limit/99-optional-netshoot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netshoot
  name: netshoot
  namespace: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
      - image: nicolaka/netshoot
        name: netshoot
        command: ["/bin/bash"]
        args: ["-c", "while true; do ping localhost; sleep 60;done"]
        resources:
          limits:
            cpu: "500m"
            memory: 256Mi
          requests:
            cpu: "500m"
            memory: 256Mi
