testing/sidecar-rate-limit/01-deploy-http-bin.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    name: httpbin
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: httpbin
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
        sidecar.istio.io/inject: "true"
        "ratelimit/config": "cluster"
        "ratelimit/actions": "httpbin-ratelimit"
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/mccutchen/go-httpbin:v2.15.0
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1
            memory: 1024Mi
          requests:
            cpu: 1
            memory: 1024Mi
