testing/sidecar-rate-limit/02-envoy-filters.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin-global-ratelimit-setup-cluster
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      "ratelimit/config": "cluster"
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
           # must be the same domain on 01-rate-limit-configs.yaml
            domain: httpbin-ratelimit
            failure_mode_deny: true
            timeout: 10s
            rate_limit_service:
              grpc_service:
                envoy_grpc:
                  cluster_name: outbound|8081||ratelimit.rate-limit.svc.cluster.local
                  authority: ratelimit.rate-limit.svc.cluster.local
              transport_api_version: V3
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin-global-ratelimit-setup-actions
  namespace: httpbin
spec:
  workloadSelector:
    labels:
      "ratelimit/actions": "httpbin-ratelimit"
  configPatches:
    - applyTo: VIRTUAL_HOST
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            name: ""
            route:
              action: ANY
      patch:
        operation: MERGE
        value:
          rate_limits:
            - actions: 
              - request_headers:
                  header_name: ":path"
                  descriptor_key: "PATH"

            - actions: 
              - request_headers:
                  header_name: "x-should-rate-limit"
                  descriptor_key: "do_rate_limit"
              - request_headers:
                  header_name: ":path"
                  descriptor_key: "PATH"
